Implement UTC timestamp based epoch instead of using blockheight
