# x/workload/types/genesis.pb.go
@@ -27,7 +27,10 @@ const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 // GenesisState defines the workload module's genesis state.
 type GenesisState struct {
 	// params defines all the parameters of the module.
-	Params Params `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
+	Params           Params     `protobuf:"bytes,1,opt,name=params,proto3" json:"params"`
+	Superior         *Superior  `protobuf:"bytes,2,opt,name=superior,proto3" json:"superior,omitempty"`
+	CurrentEpoch     *EpochInfo `protobuf:"bytes,3,opt,name=currentEpoch,proto3" json:"currentEpoch,omitempty"`
+	PendingNextEpoch *EpochInfo `protobuf:"bytes,4,opt,name=pendingNextEpoch,proto3" json:"pendingNextEpoch,omitempty"`
 }
 
 func (m *GenesisState) Reset()         { *m = GenesisState{} }
@@ -70,6 +73,27 @@ func (m *GenesisState) GetParams() Params {
 	return Params{}
 }
 
+func (m *GenesisState) GetSuperior() *Superior {
+	if m != nil {
+		return m.Superior
+	}
+	return nil
+}
+
+func (m *GenesisState) GetCurrentEpoch() *EpochInfo {
+	if m != nil {
+		return m.CurrentEpoch
+	}
+	return nil
+}
+
+func (m *GenesisState) GetPendingNextEpoch() *EpochInfo {
+	if m != nil {
+		return m.PendingNextEpoch
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*GenesisState)(nil), "enreach.workload.GenesisState")
 }
@@ -77,20 +101,26 @@ func init() {
 func init() { proto.RegisterFile("enreach/workload/genesis.proto", fileDescriptor_03f72bf3b346539a) }
 
 var fileDescriptor_03f72bf3b346539a = []byte{
-	// 198 bytes of a gzipped FileDescriptorProto
+	// 296 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x92, 0x4b, 0xcd, 0x2b, 0x4a,
 	0x4d, 0x4c, 0xce, 0xd0, 0x2f, 0xcf, 0x2f, 0xca, 0xce, 0xc9, 0x4f, 0x4c, 0xd1, 0x4f, 0x4f, 0xcd,
 	0x4b, 0x2d, 0xce, 0x2c, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x12, 0x80, 0xca, 0xeb, 0xc1,
 	0xe4, 0xa5, 0x04, 0x13, 0x73, 0x33, 0xf3, 0xf2, 0xf5, 0xc1, 0x24, 0x44, 0x91, 0x94, 0x48, 0x7a,
 	0x7e, 0x7a, 0x3e, 0x98, 0xa9, 0x0f, 0x62, 0x41, 0x45, 0x65, 0x31, 0x8c, 0x2e, 0x48, 0x2c, 0x4a,
-	0xcc, 0x85, 0x9a, 0x2c, 0x25, 0x8f, 0x21, 0x0d, 0x63, 0x40, 0x14, 0x28, 0x79, 0x73, 0xf1, 0xb8,
-	0x43, 0xdc, 0x12, 0x5c, 0x92, 0x58, 0x92, 0x2a, 0x64, 0xcd, 0xc5, 0x06, 0x31, 0x40, 0x82, 0x51,
-	0x81, 0x51, 0x83, 0xdb, 0x48, 0x42, 0x0f, 0xdd, 0x6d, 0x7a, 0x01, 0x60, 0x79, 0x27, 0xce, 0x13,
-	0xf7, 0xe4, 0x19, 0x56, 0x3c, 0xdf, 0xa0, 0xc5, 0x18, 0x04, 0xd5, 0xe2, 0x64, 0x74, 0xe2, 0x91,
-	0x1c, 0xe3, 0x85, 0x47, 0x72, 0x8c, 0x0f, 0x1e, 0xc9, 0x31, 0x4e, 0x78, 0x2c, 0xc7, 0x70, 0xe1,
-	0xb1, 0x1c, 0xc3, 0x8d, 0xc7, 0x72, 0x0c, 0x51, 0x12, 0x30, 0x77, 0x54, 0x20, 0x5c, 0x52, 0x52,
-	0x59, 0x90, 0x5a, 0x9c, 0xc4, 0x06, 0x76, 0x87, 0x31, 0x20, 0x00, 0x00, 0xff, 0xff, 0xbc, 0x21,
-	0x44, 0x50, 0x24, 0x01, 0x00, 0x00,
+	0xcc, 0x85, 0x9a, 0x2c, 0x25, 0x8f, 0x21, 0x0d, 0x63, 0xe0, 0x54, 0x50, 0x5c, 0x5a, 0x90, 0x5a,
+	0x94, 0x99, 0x5f, 0x04, 0x55, 0xa0, 0x88, 0xa1, 0x20, 0xb5, 0x20, 0x3f, 0x39, 0x23, 0x3e, 0x33,
+	0x2f, 0x0d, 0xea, 0x06, 0xa5, 0x5e, 0x26, 0x2e, 0x1e, 0x77, 0x88, 0x87, 0x82, 0x4b, 0x12, 0x4b,
+	0x52, 0x85, 0xac, 0xb9, 0xd8, 0x20, 0xae, 0x90, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x36, 0x92, 0xd0,
+	0x43, 0xf7, 0xa0, 0x5e, 0x00, 0x58, 0xde, 0x89, 0xf3, 0xc4, 0x3d, 0x79, 0x86, 0x15, 0xcf, 0x37,
+	0x68, 0x31, 0x06, 0x41, 0xb5, 0x08, 0x99, 0x71, 0x71, 0xc0, 0x9c, 0x20, 0xc1, 0x04, 0xd6, 0x2e,
+	0x85, 0xa9, 0x3d, 0x18, 0xaa, 0x22, 0x08, 0xae, 0x56, 0xc8, 0x9e, 0x8b, 0x27, 0xb9, 0xb4, 0xa8,
+	0x28, 0x35, 0xaf, 0xc4, 0x15, 0xe4, 0x40, 0x09, 0x66, 0xb0, 0x5e, 0x69, 0x4c, 0xbd, 0x60, 0x69,
+	0xcf, 0xbc, 0xb4, 0xfc, 0x20, 0x14, 0x0d, 0x42, 0xee, 0x5c, 0x02, 0x05, 0xa9, 0x79, 0x29, 0x99,
+	0x79, 0xe9, 0x7e, 0xa9, 0x15, 0x50, 0x43, 0x58, 0x08, 0x1b, 0x82, 0xa1, 0xc9, 0xc9, 0xe8, 0xc4,
+	0x23, 0x39, 0xc6, 0x0b, 0x8f, 0xe4, 0x18, 0x1f, 0x3c, 0x92, 0x63, 0x9c, 0xf0, 0x58, 0x8e, 0xe1,
+	0xc2, 0x63, 0x39, 0x86, 0x1b, 0x8f, 0xe5, 0x18, 0xa2, 0x24, 0x60, 0x81, 0x59, 0x81, 0x08, 0xce,
+	0x92, 0xca, 0x82, 0xd4, 0xe2, 0x24, 0x36, 0x70, 0x50, 0x1a, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff,
+	0xdb, 0x0f, 0x8c, 0x4d, 0x2b, 0x02, 0x00, 0x00,
 }
 
 func (m *GenesisState) Marshal() (dAtA []byte, err error) {
@@ -113,6 +143,42 @@ func (m *GenesisState) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.PendingNextEpoch != nil {
+		{
+			size, err := m.PendingNextEpoch.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
+			}
+			i -= size
+			i = encodeVarintGenesis(dAtA, i, uint64(size))
+		}
+		i--
+		dAtA[i] = 0x22
+	}
+	if m.CurrentEpoch != nil {
+		{
+			size, err := m.CurrentEpoch.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
+			}
+			i -= size
+			i = encodeVarintGenesis(dAtA, i, uint64(size))
+		}
+		i--
+		dAtA[i] = 0x1a
+	}
+	if m.Superior != nil {
+		{
+			size, err := m.Superior.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
+			}
+			i -= size
+			i = encodeVarintGenesis(dAtA, i, uint64(size))
+		}
+		i--
+		dAtA[i] = 0x12
+	}
 	{
 		size, err := m.Params.MarshalToSizedBuffer(dAtA[:i])
 		if err != nil {
@@ -145,6 +211,18 @@ func (m *GenesisState) Size() (n int) {
 	_ = l
 	l = m.Params.Size()
 	n += 1 + l + sovGenesis(uint64(l))
+	if m.Superior != nil {
+		l = m.Superior.Size()
+		n += 1 + l + sovGenesis(uint64(l))
+	}
+	if m.CurrentEpoch != nil {
+		l = m.CurrentEpoch.Size()
+		n += 1 + l + sovGenesis(uint64(l))
+	}
+	if m.PendingNextEpoch != nil {
+		l = m.PendingNextEpoch.Size()
+		n += 1 + l + sovGenesis(uint64(l))
+	}
 	return n
 }
 
@@ -213,6 +291,114 @@ func (m *GenesisState) Unmarshal(dAtA []byte) error {
 				return io.ErrUnexpectedEOF
 			}
 			if err := m.Params.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		case 2:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Superior", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if m.Superior == nil {
+				m.Superior = &Superior{}
+			}
+			if err := m.Superior.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		case 3:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field CurrentEpoch", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if m.CurrentEpoch == nil {
+				m.CurrentEpoch = &EpochInfo{}
+			}
+			if err := m.CurrentEpoch.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
+		case 4:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field PendingNextEpoch", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowGenesis
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthGenesis
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if m.PendingNextEpoch == nil {
+				m.PendingNextEpoch = &EpochInfo{}
+			}
+			if err := m.PendingNextEpoch.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
